[package]
name = "lethal_potato"
version = "0.1.0"
authors = ["liquidlegs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
clap = { version = "3.2.22", features = ["derive"] }
console = "0.15.4"
crossbeam = "0.8.2"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
