[package]
name = "lethal_potato"
version = "0.1.0"
authors = ["liquidlegs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1


[dependencies]
chrono = "0.4.23"
clap = { version = "3.2.22", features = ["derive"] }
comfy-table = "6.1.4"
console = "0.15.4"
crossbeam = "0.8.2"
pnet = "0.31.0"
pnet_base = "0.31.0"
pnet_datalink = "0.31.0"
pnet_packet = "0.31.0"
pnet_transport = "0.31.0"
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
